# TuneWeave

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: ci.yml  release.yml
crates/tuneweave-core/: Cargo.toml
crates/tuneweave-core/src/: auth.rs  capability.rs  credential_store.rs  error.rs  lib.rs  matcher.rs  model.rs  platform.rs  provider.rs  registry.rs  resolver.rs  uni_playlist_store.rs
crates/tuneweave-provider-netease/: Cargo.toml
crates/tuneweave-provider-netease/src/: auth.rs  client.rs  crypto.rs  dto.rs  lib.rs  provider.rs
crates/tuneweave-provider-qq/: Cargo.toml
crates/tuneweave-provider-qq/src/: client.rs  device.rs  lib.rs  provider.rs  qimei.rs  qrc.rs
crates/tuneweave-server/: Cargo.toml
crates/tuneweave-server/src/: lib.rs  main.rs  response.rs
docs/: api-v1.md  implementation-plan.md  upstream-audit.md
docs/coverage/: netease-basic.md  netease.md  qq-basic.md  qq.md  uni-playlist.md
