[workspace]
members = ["crates/tuneweave-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["MOPELotus"]
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
repository = "https://github.com/MOPELotus/TuneWeave"

[workspace.dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
