[workspace]
members = ["crates/tuneweave-core", "crates/tuneweave-server"]
default-members = ["crates/tuneweave-server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["MOPELotus"]
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
repository = "https://github.com/MOPELotus/TuneWeave"

[workspace.dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "query", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tuneweave-core = { path = "crates/tuneweave-core" }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
