[workspace]
members = [
    "crates/tuneweave-core",
    "crates/tuneweave-provider-netease",
    "crates/tuneweave-server",
]
default-members = ["crates/tuneweave-server"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["MOPELotus"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MOPELotus/TuneWeave"

[workspace.dependencies]
async-trait = "0.1.89"
aes = "0.8.4"
axum = { version = "0.8.9", default-features = false, features = ["http1", "json", "query", "tokio"] }
base64 = "0.22.1"
cbc = "0.1.2"
ecb = "0.1.2"
hex = "0.4.3"
md-5 = "0.10.6"
num-bigint = "0.4.6"
percent-encoding = "2.3.2"
rand = "0.10.2"
reqwest = { version = "0.13.4", default-features = false, features = ["brotli", "deflate", "form", "gzip", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tuneweave-core = { path = "crates/tuneweave-core" }
tuneweave-provider-netease = { path = "crates/tuneweave-provider-netease" }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
