[package]
name = "tuneweave-provider-netease"
description = "NetEase Cloud Music provider for TuneWeave"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes.workspace = true
async-trait.workspace = true
aws-lc-rs.workspace = true
base64.workspace = true
cbc.workspace = true
ecb.workspace = true
flate2.workspace = true
hex.workspace = true
md-5.workspace = true
num-bigint.workspace = true
percent-encoding.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tuneweave-core.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
