[package]
name = "tuneweave-provider-qq"
description = "QQ Music provider for TuneWeave"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aes.workspace = true
async-trait.workspace = true
base64.workspace = true
cbc.workspace = true
flate2.workspace = true
hex.workspace = true
md-5.workspace = true
num-bigint.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tuneweave-core.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
