[package]
name = "tuneweave-server"
description = "TuneWeave HTTP API server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tuneweave"
path = "src/main.rs"

[dependencies]
axum.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tuneweave-core.workspace = true
tuneweave-provider-netease.workspace = true

[dev-dependencies]
async-trait.workspace = true
tower.workspace = true

[lints]
workspace = true
